# spc

./: README.md  meson.build  sample.cpp  spirv_cross.cpp  spirv_cross_parsed_ir.cpp  spirv_cross_parsed_ir.hpp  spirv_parser.cpp  spirv_parser.hpp
